improved activities' endpoints logic, validations and added the documentation to swagger
