# backend/src/controllers/activity.controller.ts
@@ -1,31 +1,33 @@
 import { Request, Response } from 'express'
 import activityService from '../services/activity.service'
 import { AppError } from '../types/Error'
-import { isNumber } from '../utils/parsing'
+import { isNumber } from '../utils/validations'
 import { AuthRequest } from '../types/Request'
 import { ADMIN_ROLE_ID } from '../constants/roles'
+import { toNewActivity } from '../utils/parsing'
 
 class ActivityController {
   async getActivities (req: AuthRequest, res: Response): Promise<void> {
     try {
       // Si el usuario está autenticado y tiene un rol asignado
-      if (req.user?.role_id != null) {
-        let activities
-
-        if (req.user.role_id === ADMIN_ROLE_ID) {
-          activities = await activityService.getActivities()
-        } else {
-          activities = await activityService.getActivitiesByRole(req.user.role_id)
-        }
-
-        // Obtener actividades filtradas por rol
-        res.status(200).json({ activities })
-      } else {
+      if (req.user === undefined) {
         res.status(403).json({
           message: 'Error al obtener los eventos y convocatorias',
           error: 'Usuario no autenticado o sin rol asignado'
         })
+        return
       }
+
+      let activities
+
+      if (req.user.role_id === ADMIN_ROLE_ID) {
+        activities = await activityService.getActivities()
+      } else {
+        activities = await activityService.getActivitiesByRole(req.user.role_id)
+      }
+
+      // Obtener actividades filtradas por rol
+      res.status(200).json({ activities })
     } catch (error) {
       if (error instanceof AppError) {
         res.status(error.statusCode).json({
@@ -53,7 +55,7 @@ class ActivityController {
         return
       }
 
-      if (req.user === null) {
+      if (req.user === undefined) {
         res.status(403).json({
           message: 'Error al obtener el evento o convocatoria',
           error: 'Usuario no autenticado'
@@ -61,68 +63,35 @@ class ActivityController {
         return
       }
 
-      if (req.user?.user_id !== undefined) {
-        const response = await activityService.getActivityWithUserDetails(+activityId, req.user.user_id)
+      const activity = await activityService.getActivityWithUserDetails(+activityId, req.user.user_id)
 
-        res.status(200).json(response)
+      res.status(200).json({ activity })
+    } catch (error) {
+      if (error instanceof AppError) {
+        res.status(error.statusCode).json({
+          message: 'Error al obtener los eventos y convocatorias',
+          error: error.message
+        })
       } else {
+        res.status(500).json({
+          message: 'Error al obtener los eventos y convocatorias',
+          error: error instanceof Error ? error.message : 'Error desconocido'
+        })
+      }
+    }
+  }
+
+  async createActivity (req: AuthRequest, res: Response): Promise<undefined> {
+    try {
+      if (req.user === undefined) {
         res.status(403).json({
-          message: 'Error al obtener el evento o convocatoria',
+          message: 'Error al crear el evento o convocatoria',
           error: 'Usuario no autenticado'
         })
+        return
       }
-    } catch (error) {
-      if (error instanceof AppError) {
-        res.status(error.statusCode).json({
-          message: 'Error al obtener los eventos y convocatorias',
-          error: error.message
-        })
-      } else {
-        res.status(500).json({
-          message: 'Error al obtener los eventos y convocatorias',
-          error: error instanceof Error ? error.message : 'Error desconocido'
-        })
-      }
-    }
-  }
 
-  async getActivityWithUserDetails (req: Request, res: Response): Promise<undefined> {
-    try {
-      const { activityId, userId } = req.params
-
-      if (!isNumber(activityId)) {
-        res.status(400).json({
-          message: 'Error al obtener el evento o convocatoria',
-          error: 'El id proporcionado de la actividad es inválido'
-        })
-      } else if (!isNumber(userId)) {
-        res.status(400).json({
-          message: 'Error al obtener el evento o convocatoria',
-          error: 'El id proporcionado del usuario es inválido'
-        })
-      } else {
-        const response = await activityService.getActivityWithUserDetails(Number(activityId), Number(userId))
-
-        res.status(200).json(response)
-      }
-    } catch (error) {
-      if (error instanceof AppError) {
-        res.status(error.statusCode).json({
-          message: 'Error al obtener los eventos y convocatorias',
-          error: error.message
-        })
-      } else {
-        res.status(500).json({
-          message: 'Error al obtener los eventos y convocatorias',
-          error: error instanceof Error ? error.message : 'Error desconocido'
-        })
-      }
-    }
-  }
-
-  async createActivity (req: Request, res: Response): Promise<undefined> {
-    try {
-      const newActivity = req.body
+      const newActivity = toNewActivity({ admin_creator_id: req.user.user_id, ...req.body })
 
       const createdActivity = await activityService.createActivity(newActivity)
 
@@ -171,67 +140,90 @@ class ActivityController {
     }
   }
 
-  async getUserUpcomingActivities (req: Request, res: Response): Promise<undefined> {
+  async getUserUpcomingActivities (req: AuthRequest, res: Response): Promise<undefined> {
     try {
-      const { userId } = req.params
-
-      if (!isNumber(userId)) {
-        res.status(400).json({
-          message: 'Error al obtener los eventos o convocatorias',
-          error: 'El id proporcionado es inválido'
+      if (req.user === undefined) {
+        res.status(403).json({
+          message: 'Error al obtener los eventos o convocatorias futuras',
+          error: 'Usuario no autenticado'
         })
-      } else {
-        const upcomingUserActivities = await activityService.getUserUpcomingActivities(+userId)
-
-        res.status(200).json({ activities: upcomingUserActivities })
+        return
       }
+
+      const upcomingUserActivities = await activityService.getUserUpcomingActivities(req.user.user_id)
+
+      res.status(200).json({ activities: upcomingUserActivities })
     } catch (error) {
       if (error instanceof AppError) {
         res.status(error.statusCode).json({
-          message: 'Error al obtener los eventos o convocatorias',
+          message: 'Error al obtener los eventos o convocatorias futuras',
           error: error.message
         })
       } else {
         res.status(500).json({
-          message: 'Error al obtener los eventos o convocatorias',
+          message: 'Error al obtener los eventos o convocatorias futuras',
           error: error instanceof Error ? error.message : 'Error desconocido'
         })
       }
     }
   }
 
-  async getUserPastActivities (req: Request, res: Response): Promise<undefined> {
+  async getUserPastActivities (req: AuthRequest, res: Response): Promise<undefined> {
     try {
-      const { userId } = req.params
+      if (req.user === undefined) {
+        res.status(403).json({
+          message: 'Error al obtener los eventos o convocatorias pasadas',
+          error: 'Usuario no autenticado'
+        })
+        return
+      }
+
+      const userId = req.user.user_id
 
       if (!isNumber(userId)) {
         res.status(400).json({
-          message: 'Error al obtener los eventos o convocatorias',
+          message: 'Error al obtener los eventos o convocatorias pasadas',
           error: 'El id proporcionado es inválido'
         })
-      } else {
-        const pastUserActivities = await activityService.getUserPastActivities(+userId)
-
-        res.status(200).json({ activities: pastUserActivities })
+        return
       }
+
+      const pastUserActivities = await activityService.getUserPastActivities(+userId)
+
+      res.status(200).json({ activities: pastUserActivities })
     } catch (error) {
       if (error instanceof AppError) {
         res.status(error.statusCode).json({
-          message: 'Error al obtener los eventos o convocatorias',
+          message: 'Error al obtener los eventos o convocatorias pasadas',
           error: error.message
         })
       } else {
         res.status(500).json({
-          message: 'Error al obtener los eventos o convocatorias',
+          message: 'Error al obtener los eventos o convocatorias pasadas',
           error: error instanceof Error ? error.message : 'Error desconocido'
         })
       }
     }
   }
 
-  async getUpcomingActivities (_req: Request, res: Response): Promise<undefined> {
+  async getUpcomingActivities (req: AuthRequest, res: Response): Promise<undefined> {
     try {
-      const upcomingActivities = await activityService.getUpcomingActivities()
+      if (req.user === undefined) {
+        res.status(403).json({
+          message: 'Error al obtener los eventos o convocatorias futuras',
+          error: 'Usuario no autenticado'
+        })
+        return
+      }
+
+      // Si el usuario está autenticado y tiene un rol asignado
+      let upcomingActivities
+
+      if (req.user.role_id === ADMIN_ROLE_ID) {
+        upcomingActivities = await activityService.getUpcomingActivities()
+      } else {
+        upcomingActivities = await activityService.getUpcomingActivitiesByRole(req.user.role_id)
+      }
 
       res.status(200).json({ activities: upcomingActivities })
     } catch (error) {
